NOTE: Add this to config.php   define('DB_SYSTEM', 'mysql');

09082103 -> jonnyboy -> fixed python script echo properlly when run from php script, other minor tweaks	
09072103 -> jonnyboy -> fixed bug where update_binaries not using compression after first grab
						fixed bug where update_binaries not getting correct set of headers, when postdate fails initial attempt, may need to reset_truncate.php to be safe
						fixed bug where update_binaries not running correctly on new groups(i hope)
                        fixed bug where parsePAR2 was not using alternate nntp, other minor fixes
09022013 -> jonnyboy -> various, numberous little bug fixes
08312013 -> jonnyboy -> added threaded versions for fixreleasesnames and update_releases, these should be considered alpha and could create invalid releases
						cleaned up a few bugs
08292013 -> jonnyboy -> changed queries for pg
						update for changes to decrypt_hashes.php
						typo in monitor.php
                        removed unneeded column from nzbs table
08292013 -> kevin    -> August 23 to 29:
                        Convert to php database objects.
                        Almost full support for postgresql (still needs work).
                             Now there is a seperate schema / patches for both database types, make sure to read the readme in db if you are submiting patches.
                             The install has been modified to support postgresql, but it has been locked for now while I keep working on it. 
                        Start working on comment sharing throughout sites (ThePeePs will work on the rest with our help).
                        Fixes to par2 and toggle option to turn on and off adding the files to the filelist.
                        Changes to the install page (more checks and clearer text).
                        Changes to namefixer to not rerun the same release, also changes to relnamestatus, consolidating relstatus and adding more types.