@@ -11578,6 +11578,8 @@ DROP INDEX IF EXISTS "movieinfo_title" CASCADE;
 CREATE INDEX "movieinfo_title" ON "movieinfo" ("title");ALTER TABLE "musicinfo" ADD CONSTRAINT "musicinfo_id_pkey" PRIMARY KEY("id");ALTER TABLE "nzbs" ADD CONSTRAINT "id_pkey" PRIMARY KEY("id");
 DROP INDEX IF EXISTS "nzbs_partnumber" CASCADE;
 CREATE INDEX "nzbs_partnumber" ON "nzbs" ("partnumber");
+DROP INDEX IF EXISTS "nzbs_message" CASCADE;
+CREATE UNIQUE INDEX "nzbs_message" ON "nzbs" ("message_id");
 DROP INDEX IF EXISTS "nzbs_collectionhash" CASCADE;
 CREATE INDEX "nzbs_collectionhash" ON "nzbs" ("collectionhash");ALTER TABLE "partrepair" ADD CONSTRAINT "partrepair_id_pkey" PRIMARY KEY("id");
 DROP INDEX IF EXISTS "partrepair_numberID_groupid" CASCADE;
